<link> elements should be able to fire more than one load / error event https://bugs.webkit.org/show_bug.cgi?id=232309

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing.

* web-platform-tests/html/semantics/document-metadata/the-link-element/link-multiple-error-events-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-multiple-load-events-expected.txt:

Source/WebCore:

We had logic to only fire a single load / error event for <link> elements, even
though they could do several loads. This logic is not part of the specification
and was causing us to fail some WPT tests.

No new tests, unskipped existing tests.

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::HTMLLinkElement):
(WebCore::HTMLLinkElement::notifyLoadedSheetAndAllCriticalSubresources):
* html/HTMLLinkElement.h:

LayoutTests:

Unskip tests that are no longer timing out.

* TestExpectations:


Canonical link: https://commits.webkit.org/243560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284883 268f45cc-cd09-0410-ab3c-d52691b4dbfc